--- a/tags.html
+++ b/tags.html
@@ -32,8 +32,8 @@ permalink: /tags/
     <ul class="posts">
       {% for post in site.posts %}
         {% if post.tags contains tag %}
-            <p class="post_info"><a href="{{ post.url }}">{{ post.title }}</a>
-              <span>{{ post.date | date:"%Y-%m-%d" }}
+            <p class="post_info"><a href="{{ post.url }}">{{ post.title }}</a> {{ post.date | date:"%Y-%m-%d" }}
+              <span style="color:blue; font-style: italic">
 		{% for t in post.tags %}
 		  {{ t }}
 		{% endfor %}
