--- a/tags.html
+++ b/tags.html
@@ -35,7 +35,9 @@ permalink: /tags/
             <p class="post_info"><a href="{{ post.url }}">{{ post.title }}</a> {{ post.date | date:"%Y-%m-%d" }}
               <span style="font-style: italic; font-size: smaller">
 		{% for t in post.tags %}
-		  {{ t }}
+                  {% if t != tag %}
+     		    <a href="#{{ t }}">{{ t }}</a>
+                  {% endif %}
 		{% endfor %}
 	      </span>
               <br>{{ post.excerpt | strip_html }}
