--- a/sailracing.html
+++ b/sailracing.html
@@ -7,10 +7,36 @@ layout: null
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
     <title>Sail Racing</title>
   </head>
+  <style>
+  body {
+      font-size: 400%;
+      background-color: black;
+      color: #fcdb03;
+      margin:0;
+      padding:0;
+      width: 100%;
+      height: 100%;
+  }
+  </style>
   <body>
-    <h1>Sail Racing</h1>
+    <a onclick="start()">Start</a>
   </body>
 </html>
 <script>
-  
+  e = document.body;
+
+  function pos(p) {
+      alert('here')
+      c = p.coords
+      e.innerHTML = 'Latitude, Longitude: ' + c.latitude + ', ' + c.longitude
+  }
+
+  function start() {
+      if ("geolocation" in navigator) {
+      	  e.innerHTML = 'Geo Available '
+	        navigator.geolocation.getCurrentPosition(pos)
+      } else {
+      	  e.innerHTML = 'No Geo Available'
+      }
+  }
 </script>
