--- a/sailracing.html
+++ b/sailracing.html
@@ -2,7 +2,7 @@
 layout: null
 ---
 <!DOCTYPE html>
-<html manifest="tetris.manifest">
+<html>
   <head>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
     <title>Sail Racing</title>
