--- a/sailracing.html
+++ b/sailracing.html
@@ -26,51 +26,65 @@ layout: null
   </body>
 </html>
 <script>
-  var v = 1;
+  function ctfmt() {
+      var d = new Date();
+      return d.toLocaleTimeString();
+  }
+
+  var v = 2;
   var c = null;
-  var cnt = 0;
+  var ct = ctfmt();
+
   var error = null;
   var errorcnt = 0;
   var tracking = null;
+  var timer = null;
+  
+  const geolocationoptions = {
+      maximumAge: 0,
+      enableHighAccuracy: true,
+      timeout: 1000
+  };
+
+  function elapsedsecond() {
+      ct = ctfmt();
+      if (errorcnt > 0) {
+	  errorcnt = errorcnt - 1;
+	  if (errorcnt == 0)
+	      error = null;
+      }
+      drawpage();
+  }
 
   function pos(p) {
       if (tracking == null)
 	  return;
       c = p.coords;
-      cnt = cnt + 1;
-      drawpage();
   }
 
-  function seterror(sec, txt) {
+  function seterror(txt, sec) {
+      if (sec == null) sec = 5;
       error = txt;
       errorcnt = sec;
   }
 
   function err(ec) {
-      seterror(5, ec.message);
-      drawpage();
+      if (ec.code != GeolocationPositionError.TIMEOUT)
+	  seterror(ec.message);
   }
 
   function updateposition() {
-      const opt = {
-	  maximumAge: 0,
-	  enableHighAccuracy: true,
-	  timeout: 1000
-      };
-      navigator.geolocation.getCurrentPosition(pos, err, opt);
-      if (errorcnt > 0) {
-	  errorcnt = errorcnt - 1;
-	  if (errorcnt == 0)
-	      error = null
-      }
+      navigator.geolocation.getCurrentPosition(pos, err, geolocationoptions);
   }
 
   function recordtoggle(startp) {
       if (tracking == null) {
-	  tracking = setInterval(updateposition, 1000);
-	  
+	  timer = setInterval(elapsedsecond, 1000);
+	  tracking = navigator.geolocation.watchPosition(pos, err, geolocationoptions);
       } else {
-	  clearInterval(tracking);
+	  clearInterval(timer);
+	  timer = null;
+	  navigator.geolocation.clearWatch(tracking);
 	  tracking = null;
 	  c = null;
       }
@@ -86,7 +100,7 @@ layout: null
 	  h += '<p><a onclick="recordtoggle();">Finish</a></p>';
       }
       if (c != null) {
-	  h += '<p>Latitude, Longitude: ' + c.latitude + ', ' + c.longitude + ', ' + cnt + '</p>';
+	  h += '<p>Latitude, Longitude: ' + c.latitude + ', ' + c.longitude + ', ' + ct + '</p>';
       }
       if (error != null) {
 	  h += '<p class="error">' + error + '</p>';
@@ -99,7 +113,7 @@ layout: null
 	  name: 'geolocation'
       }).then(function(result) {
 	  if (result.state != 'granted')
-	      seterror(5, "This application requires geolocation permission to be set to granted.");
+	      seterror("This application requires geolocation permission to be set to granted.");
 	  console.log('Permission: ' + result.state);
       });
   }
@@ -108,7 +122,7 @@ layout: null
       getpermission()
       drawpage()
   } else {
-      seterror(5, "This application doesn't work in this browser");
+      seterror("This application doesn't work in this browser");
       drawpage()
   }
 </script>
