--- a/sailracing.html
+++ b/sailracing.html
@@ -5,7 +5,7 @@ layout: null
 <html>
   <head>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-    <title>Sail Racing</title>
+    <title>Sail Racing 1</title>
   </head>
   <style>
   body {
